# python-sdk

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
spectracost/: __init__.py  attribution.py  instrument.py  transport.py  types.py
spectracost/providers/: anthropic.py  base.py  openai.py
tests/: conftest.py  test_anthropic_wrapper.py  test_attribution.py  test_instrument.py  test_openai_wrapper.py  test_transport.py
