[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spectracost"
version = "0.2.1"
description = "AI cost observability SDK - see the full spectrum of your AI spend"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/spectracost/python-sdk"
Issues = "https://github.com/spectracost/python-sdk/issues"
Source = "https://github.com/spectracost/python-sdk"

# Zero required dependencies — only stdlib
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpserver>=1.0",
    "openai>=1.0",
    "anthropic>=0.30",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
